WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276359
[GStreamer] Caps updates fixes for VideoFrame implementation
https://bugs.webkit.org/show_bug.cgi?id=276359
Summary
[GStreamer] Caps updates fixes for VideoFrame implementation
Philippe Normand
Reported
2024-07-09 00:57:10 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-07-09 01:05:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30597
EWS
Comment 2
2024-07-10 00:20:57 PDT
Committed
280807@main
(8e166d523ba1): <
https://commits.webkit.org/280807@main
> Reviewed commits have been landed. Closing PR #30597 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-10 00:21:14 PDT
<
rdar://problem/131443154
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug