[GStreamer] Caps updates fixes for VideoFrame implementation https://bugs.webkit.org/show_bug.cgi?id=276359

Reviewed by Xabier Rodriguez-Calvar.

Copy the caps before updating them and also make sure the sample is writable before changing its
caps.

* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::VideoFrameGStreamer::setFrameRate):
(WebCore::VideoFrameGStreamer::setMaxFrameRate):

Canonical link: https://commits.webkit.org/280807@main