Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp
@@ -403,21 +403,26 @@ VideoFrameGStreamer::VideoFrameGStreamer(const GRefPtr<GstSample>& sample, const
 
 void VideoFrameGStreamer::setFrameRate(double frameRate)
 {
-    auto caps = gst_sample_get_caps(m_sample.get());
+    auto caps = adoptGRef(gst_caps_copy(gst_sample_get_caps(m_sample.get())));
     int frameRateNumerator, frameRateDenominator;
     gst_util_double_to_fraction(frameRate, &frameRateNumerator, &frameRateDenominator);
-    gst_caps_set_simple(caps, "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr);
+    gst_caps_set_simple(caps.get(), "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr);
 
     auto buffer = gst_sample_get_buffer(m_sample.get());
     GST_BUFFER_DURATION(buffer) = toGstClockTime(1_s / frameRate);
+
+    m_sample = adoptGRef(gst_sample_make_writable(m_sample.leakRef()));
+    gst_sample_set_caps(m_sample.get(), caps.get());
 }
 
 void VideoFrameGStreamer::setMaxFrameRate(double maxFrameRate)
 {
-    auto caps = gst_sample_get_caps(m_sample.get());
+    auto caps = adoptGRef(gst_caps_copy(gst_sample_get_caps(m_sample.get())));
     int frameRateNumerator, frameRateDenominator;
     gst_util_double_to_fraction(maxFrameRate, &frameRateNumerator, &frameRateDenominator);
-    gst_caps_set_simple(caps, "framerate", GST_TYPE_FRACTION, 0, 1, "max-framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr);
+    gst_caps_set_simple(caps.get(), "framerate", GST_TYPE_FRACTION, 0, 1, "max-framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr);
+    m_sample = adoptGRef(gst_sample_make_writable(m_sample.leakRef()));
+    gst_sample_set_caps(m_sample.get(), caps.get());
 }
 
 void VideoFrameGStreamer::setPresentationTime(const MediaTime& presentationTime)
